# claude-git-analyser

./: .gitignore  AGENT_HISTORY.md  LINKEDIN_ARTICLE.md  README.MD  README.md  install.sh  pyproject.toml
src/: cli.py  config.py  orchestrator.py
src/agents/: architecture_agent.py  block_analyzer.py  branch_agent.py  commit_agent.py  dynamic_analyzer.py  quality_agent.py  release_agent.py
src/ai/: client.py  prompts.py
src/git/: branch_matcher.py  grouper.py  repo.py
src/report/: terminal.py  yaml_export.py
src/setup/: stack_detector.py  tool_checker.py
tests/: test_git_repo.py
